--- a/CrNET/CrNET/CrNET.csproj
+++ b/CrNET/CrNET/CrNET.csproj
@@ -53,14 +53,20 @@
   <ItemGroup>
     <Compile Include="CrCore.cs" />
     <Compile Include="Interfaces\ICrCoreCards.cs" />
+    <Compile Include="Interfaces\ICrCoreClans.cs" />
     <Compile Include="Methods\Request.cs" />
     <Compile Include="Methods\UrlBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CrCoreClans.cs" />
     <Compile Include="Services\CrCoreCards.cs" />
     <Compile Include="Types\Cards\Card.cs" />
     <Compile Include="Types\Cards\Cards.cs" />
+    <Compile Include="Types\Clans\Clan.cs" />
+    <Compile Include="Types\Clans\Clans.cs" />
     <Compile Include="Types\Default\BadRequest.cs" />
     <Compile Include="Types\Default\IconUrls.cs" />
+    <Compile Include="Types\Default\Location.cs" />
+    <Compile Include="Types\Default\SearchFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
